--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,12 @@ header .encabezado .navbar .nav-list {
   gap: 72px;
   font-size: 24px;
 }
+header .encabezado .navbar .nav-list li a {
+  transition: color 0.3s ease-in-out;
+}
+header .encabezado .navbar .nav-list li a:hover {
+  color: #908ff4;
+}
 header .encabezado .botones {
   display: flex;
   align-items: center;
@@ -60,21 +66,21 @@ header .encabezado .botones .boton-registro {
   align-items: center;
   justify-content: center;
 }
-header .encabezado .botones-no {
+header .encabezado .hamburguer {
   display: none;
 }
 
-footer {
+footer .footer {
   width: 100%;
   height: 394px;
   background: #010047;
   color: white;
   display: flex;
 }
-footer a {
+footer .footer a {
   color: white;
 }
-footer .info {
+footer .footer .info {
   width: 220px;
   height: 282px;
   margin: 53px 41px 59px 172px;
@@ -82,22 +88,32 @@ footer .info {
   flex-direction: column;
   justify-content: space-between;
 }
-footer .contacto {
+footer .footer .contacto {
   margin-top: 53px;
   width: 220px;
   height: 282px;
 }
-footer .contacto .logosinfo a {
+footer .footer .contacto .logosinfo a {
   margin: 8px;
   padding-top: 20px;
 }
-footer .contacto h4 {
+footer .footer .contacto h4 {
   margin-bottom: 22px;
+}
+footer .derechos {
+  background-color: #010047;
+  color: rgb(134, 134, 134);
+  text-align: center;
+  padding-bottom: 20px;
+}
+footer .derechos p {
+  font-size: 16px;
+  opacity: 50%;
 }
 
 main .container {
   width: 100%;
-  height: 265px;
+  height: 16.5625rem;
 }
 main .container .banner {
   width: 100%;
@@ -110,19 +126,19 @@ main .container .banner .banner-text {
   width: 50%;
 }
 main .container .banner .banner-text h1 {
-  font-size: 40px;
+  font-size: 2.5rem;
   font-weight: bold;
   color: #5856D6;
-  margin-bottom: 20px;
+  margin-bottom: 1.25rem;
 }
 main .container .banner .banner-text h3 {
-  font-size: 24px;
+  font-size: 1.5rem;
   font-weight: bold;
   color: #5856D6;
-  margin-bottom: 10px;
+  margin-bottom: 0.625rem;
 }
 main .container .banner .banner-text h4 {
-  font-size: 18px;
+  font-size: 1.125rem;
   font-weight: bold;
   color: #5856D6;
 }
@@ -133,37 +149,37 @@ main .box {
 }
 main .box .card, main .box .card2, main .box .card3 {
   background: #5856D6;
-  border-radius: 34px;
-  height: 121px;
-  width: 345px;
+  border-radius: 2.125rem;
+  height: 7.5625rem;
+  width: 21.5625rem;
   display: flex;
   flex-direction: row-reverse;
 }
 main .box .card img, main .box .card2 img, main .box .card3 img {
-  margin-right: 15px;
+  margin-right: 0.9375rem;
 }
 main .box .card div, main .box .card2 div, main .box .card3 div {
   color: white;
-  margin: 20px;
+  margin: 1.25rem;
 }
 main .box .card div h3, main .box .card2 div h3, main .box .card3 div h3 {
-  font-size: 22px;
-  margin-bottom: 10px;
+  font-size: 1.375rem;
+  margin-bottom: 0.625rem;
 }
 main .box .card div p, main .box .card2 div p, main .box .card3 div p {
-  font-size: 14px;
+  font-size: 0.875rem;
 }
 main .titulo2 {
   width: 100%;
   height: auto;
   background-color: #5856D6;
   color: white;
-  font-size: 35px;
+  font-size: 2.1875rem;
   text-align: center;
-  margin-top: 30px;
+  margin-top: 1.875rem;
 }
 main .titulo2 h2 {
-  padding: 30px;
+  padding: 1.875rem;
 }
 main .ventajas {
   background-color: #5856D6;
@@ -174,35 +190,35 @@ main .ventajas {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding-bottom: 40px;
-  gap: 20px;
+  padding-bottom: 2.5rem;
+  gap: 1.25rem;
 }
 main .ventajas img {
-  margin: 5px;
-  width: 100px;
-  height: 100px;
+  margin: 0.3125rem;
+  width: 6.25rem;
+  height: 6.25rem;
   border-radius: 50%;
   background: #FFFFFF;
 }
 main .ventajas h4 {
-  font-size: 20px;
-  margin-left: 20px;
+  font-size: 1.25rem;
+  margin-left: 1.25rem;
 }
 main .ventajas p {
-  margin-left: 20px;
-  margin-top: 10px;
+  margin-left: 1.25rem;
+  margin-top: 0.625rem;
 }
 main .ventajas .ventajas1, main .ventajas .ventajas2, main .ventajas .ventajas3 {
-  width: 849px;
+  width: 53.0625rem;
   height: 100%;
   display: flex;
 }
 main .titulo3 {
   width: 100%;
-  height: 120px;
+  height: auto;
 }
 main .titulo3 h2 {
-  font-size: 48px;
+  font-size: 3rem;
   color: #5856D6;
   text-align: center;
 }
@@ -211,38 +227,38 @@ main .cuadros {
   width: 100%;
   display: flex;
   flex-direction: row wrap;
-  gap: 55px;
+  gap: 3.4375rem;
   justify-content: center;
-  padding-top: 44px;
-  padding-bottom: 30px;
+  padding-top: 2.75rem;
+  padding-bottom: 1.875rem;
 }
 main .cuadros h4 {
   color: #5856D6;
   font-family: "SF Pro Display";
   font-style: normal;
-  font-size: 20px;
-  margin: 11px 80px 11px 16px;
+  font-size: 1.25rem;
+  margin: 0.6875rem 5rem 0.6875rem 1rem;
 }
 main .cuadros p {
   font-family: "SF Pro Display";
   color: #5856D6;
   font-style: normal;
   font-weight: 500;
-  font-size: 16px;
-  line-height: 19px;
-  margin: 11px 25px 44px 16px;
+  font-size: 1rem;
+  line-height: 1.1875rem;
+  margin: 0.6875rem 1.5625rem 2.75rem 1rem;
 }
 main .cuadros .cuadro1, main .cuadros .cuadro2, main .cuadros .cuadro3 {
-  width: 272px;
-  height: 242px;
+  width: 17rem;
+  height: auto;
   display: flex;
   background-color: white;
-  border-radius: 20px;
+  border-radius: 1.25rem;
   flex-direction: column;
 }
 main .info-descarga {
   width: 100%;
-  height: 167px;
+  height: 10.4375rem;
   background-color: #5856D6;
   display: flex;
   color: white;
@@ -250,31 +266,31 @@ main .info-descarga {
 }
 main .info-descarga .escanea {
   width: 50% px;
-  height: 132px;
+  height: 8.25rem;
   display: flex;
-  gap: 26px;
+  gap: 1.625rem;
   align-items: center;
 }
 main .info-descarga .escanea img {
-  width: 100px;
-  height: 100px;
+  width: 6.25rem;
+  height: 6.25rem;
 }
 main .info-descarga .descarga {
   width: 50% px;
-  height: 132px;
+  height: 8.25rem;
   display: flex;
-  gap: 26px;
+  gap: 1.625rem;
   align-items: center;
 }
 main .info-descarga .descarga img {
-  width: 213px;
-  height: 78px;
+  width: 13.3125rem;
+  height: 4.875rem;
 }
 main .tienda {
   display: flex;
   justify-content: space-evenly;
-  height: 753px;
-  margin-top: 50px;
+  height: 47.0625rem;
+  margin-top: 3.125rem;
 }
 main .tienda .card-info {
   flex-direction: column;
@@ -282,68 +298,77 @@ main .tienda .card-info {
 main .tienda .card-info h3 {
   font-style: normal;
   font-weight: 700;
-  font-size: 34px;
+  font-size: 2.125rem;
   color: #FFCC00;
 }
 main .tienda .card-info h5 {
   font-style: normal;
   font-weight: 700;
-  font-size: 24px;
+  font-size: 1.5rem;
   color: #5856D6;
-  margin-bottom: 61px;
+  margin-bottom: 3.8125rem;
 }
 main .tienda .formulario-tienda {
   color: #5856D6;
   font-weight: 700;
-  font-size: 20px;
+  font-size: 1.25rem;
 }
 main .tienda .formulario-tienda form input {
-  border: 1px solid #5856D6;
-  border-radius: 10px;
-  width: 359px;
-  height: 43px;
+  border: 0.0625rem solid #5856D6;
+  border-radius: 0.625rem;
+  width: 22.4375rem;
+  height: 2.6875rem;
   color: black;
-  padding-left: 10px;
+  padding-left: 0.625rem;
 }
 main .tienda .formulario-tienda form div {
-  margin: 23px 0px 5px 0px;
+  margin: 1.4375rem 0rem 0.3125rem 0rem;
 }
 main .tienda .formulario-tienda .mapa {
-  border-radius: 30px;
+  border-radius: 1.875rem;
 }
 main .tienda .formulario-tienda .enviar-boton input {
   color: white;
   background-color: #5856D6;
-  width: 106px;
-  height: 50px;
+  width: 6.625rem;
+  height: 3.125rem;
   font-weight: 600;
-  font-size: 17px;
+  font-size: 1.0625rem;
 }
 main .main .somos-domii h2 {
   font-weight: 700;
-  font-size: 48px;
+  font-size: 3rem;
   color: #5856D6;
   text-align: center;
-  padding: 20px;
+  padding: 1.25rem;
 }
 main .main .somos-domii .texto1 {
-  font-size: 20px;
+  font-size: 1.25rem;
   color: black;
-  margin: 100px;
+  margin: 6.25rem;
+}
+main .main .somos-domii .equipo {
+  display: flex;
+  justify-content: center;
+}
+main .main .somos-domii .equipo img {
+  width: 90%;
+  height: auto;
+  align-items: center;
 }
 main .registro {
   display: flex;
-  height: 804px;
+  height: 50.25rem;
   align-items: center;
 }
 main .registro .imagen1 img {
-  width: 690px;
-  height: 602px;
-  border-radius: 30px;
-  margin-left: 40px;
+  width: 43.125rem;
+  height: 37.625rem;
+  border-radius: 1.875rem;
+  margin-left: 2.5rem;
 }
 main .registro .inicio-sesion {
-  margin-left: 125px;
+  margin-left: 7.8125rem;
 }
 main .registro .inicio-sesion .card-inicio {
   display: flex;
@@ -354,12 +379,12 @@ main .registro .inicio-sesion .card-inicio .inicioGoogle {
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding: 12px 75px 12px 70px;
-  gap: 10px;
-  width: 359px;
-  height: 58px;
+  padding: 0.75rem 4.6875rem 0.75rem 4.375rem;
+  gap: 0.625rem;
+  width: 22.4375rem;
+  height: 3.625rem;
   background: #5985E5;
-  border-radius: 15px;
+  border-radius: 0.9375rem;
   color: white;
 }
 main .registro .inicio-sesion .card-inicio .inicioFacebook, main .registro .inicio-sesion .card-inicio .inicioTwitter {
@@ -367,21 +392,21 @@ main .registro .inicio-sesion .card-inicio .inicioFacebook, main .registro .inic
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding: 12px 75px 12px 60px;
-  gap: 10px;
-  width: 359px;
-  height: 58px;
-  border: 1px solid rgba(30, 30, 30, 0.2);
-  border-radius: 15px;
+  padding: 0.75rem 4.6875rem 0.75rem 3.75rem;
+  gap: 0.625rem;
+  width: 22.4375rem;
+  height: 3.625rem;
+  border: 0.0625rem solid rgba(30, 30, 30, 0.2);
+  border-radius: 0.9375rem;
 }
 main .registro .inicio-sesion h4 {
   color: black;
   text-align: center;
-  font-size: 32px;
-  margin-bottom: 10px;
+  font-size: 2rem;
+  margin-bottom: 0.625rem;
 }
 main .registro .inicio-sesion div {
-  margin: 10px;
+  margin: 0.625rem;
 }
 main .registro .inicio-sesion .inputInicio {
   display: flex;
@@ -389,43 +414,43 @@ main .registro .inicio-sesion .inputInicio {
   align-items: center;
 }
 main .registro .inicio-sesion .inputInicio div {
-  border: 1px solid rgba(30, 30, 30, 0.2);
+  border: 0.0625rem solid rgba(30, 30, 30, 0.2);
 }
 main .registro .inicio-sesion .inputInicio input {
-  padding: 14px 75px 14px 20px;
-  gap: 10px;
-  width: 359px;
-  height: 43px;
-  border: 1px solid rgba(30, 30, 30, 0.2);
-  border-radius: 10px;
-  margin-top: 20px;
+  padding: 0.875rem 4.6875rem 0.875rem 1.25rem;
+  gap: 0.625rem;
+  width: 22.4375rem;
+  height: 2.6875rem;
+  border: 0.0625rem solid rgba(30, 30, 30, 0.2);
+  border-radius: 0.625rem;
+  margin-top: 1.25rem;
 }
 main .registro .inicio-sesion .inputInicio p {
-  font-size: 14px;
+  font-size: 0.875rem;
   color: gray;
   text-align: center;
-  margin-bottom: 10px;
+  margin-bottom: 0.625rem;
 }
 main .registro .inicio-sesion .inputInicio .boton-inicio2 {
-  width: 359px;
-  height: 43px;
+  width: 22.4375rem;
+  height: 2.6875rem;
   background: #5856D6;
-  border-radius: 10px;
-  margin-top: 20px;
+  border-radius: 0.625rem;
+  margin-top: 1.25rem;
 }
 main .registro .inicio-sesion .inputInicio .boton-inicio2 p {
   color: white;
-  font-size: 16px;
-  margin-top: 10px;
+  font-size: 1rem;
+  margin-top: 0.625rem;
 }
 main .registro .inicio-sesion .inputInicio .olvide1 {
-  margin-top: 20px;
+  margin-top: 1.25rem;
   border: none;
 }
 main .hit1 h2 {
   color: #5856D6;
-  font-size: 48px;
-  margin: 20px 0px 20px 50px;
+  font-size: 3rem;
+  margin: 1.25rem 0rem 1.25rem 3.125rem;
 }
 main .historial1 {
   display: flex;
@@ -434,23 +459,23 @@ main .historial1 {
 main .historial1 .card-historial div {
   display: flex;
   flex-direction: column;
-  width: 402px;
-  height: 74px;
-  margin: 15px;
-  border-radius: 30px;
+  width: 25.125rem;
+  height: 4.625rem;
+  margin: 0.9375rem;
+  border-radius: 1.875rem;
   border: solid #5856D6;
 }
 main .historial1 .card-historial div h4 {
   color: #5856D6;
-  padding: 14px 244px 2px 48px;
+  padding: 0.875rem 15.25rem 0.125rem 3rem;
 }
 main .historial1 .card-historial div p {
   color: #FFCC00;
-  padding: 0px 244px 9px 48px;
+  padding: 0rem 15.25rem 0.5625rem 3rem;
 }
 main .historial1 .card-historial div i {
   color: #5856D6;
-  font-size: 20px;
+  font-size: 1.25rem;
 }
 main .historial1 .card-historial .card-historia-1 {
   background-color: #5856D6;
@@ -463,66 +488,66 @@ main .historial1 .card-historial .card-historia-1 i {
 }
 main .historial1 .card-mapa .card-mapa-1 p {
   color: #5856D6;
-  font-size: 20px;
+  font-size: 1.25rem;
   font-weight: 700;
-  margin-bottom: 11px;
+  margin-bottom: 0.6875rem;
 }
 main .historial1 .card-mapa .card-mapa-2 {
-  width: 355px;
-  height: 181px;
-  border-radius: 20px;
+  width: 22.1875rem;
+  height: 11.3125rem;
+  border-radius: 1.25rem;
   background: rgba(88, 86, 214, 0.5);
-  margin: 22px;
+  margin: 1.375rem;
 }
 main .historial1 .card-mapa .card-mapa-2 div {
-  width: 289px;
-  height: 65px;
+  width: 18.0625rem;
+  height: 4.0625rem;
   background-color: white;
-  margin: 7px 30px 7px 37px;
-  border-radius: 15px;
+  margin: 0.4375rem 1.875rem 0.4375rem 2.3125rem;
+  border-radius: 0.9375rem;
 }
 main .historial1 .card-mapa .card-mapa-2 h5 {
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: 400;
   text-align: center;
-  padding: 10px 0px 0px 0px;
+  padding: 0.625rem 0rem 0rem 0rem;
 }
 main .historial1 .card-mapa .card-mapa-2 p {
-  font-size: 13px;
+  font-size: 0.8125rem;
   color: #8E8E93;
   text-align: center;
-  margin: 10px 0 5px 0;
+  margin: 0.625rem 0 0.3125rem 0;
 }
 main .historial1 .card-mapa .card-mapa-2 i {
-  color: #5856D6;
+  color: rgba(88, 86, 214, 0);
 }
 main .historial1 .card-info h4 {
   color: white;
-  font-size: 17px;
+  font-size: 1.0625rem;
   font-weight: 700;
-  padding-left: 15px;
-  padding-top: 12px;
+  padding-left: 0.9375rem;
+  padding-top: 0.75rem;
 }
 main .historial1 .card-info .tu-domii {
-  width: 355px;
-  height: 120px;
+  width: 22.1875rem;
+  height: 7.5rem;
   background: rgba(88, 86, 214, 0.5);
-  border-radius: 20px;
-  margin-bottom: 8px;
+  border-radius: 1.25rem;
+  margin-bottom: 0.5rem;
 }
 main .historial1 .card-info .tu-domii .dom {
-  width: 319px;
-  height: 51px;
+  width: 19.9375rem;
+  height: 3.1875rem;
   background: #F2F2F7;
-  border-radius: 10px;
-  margin: 18px 19px 16px 17px;
+  border-radius: 0.625rem;
+  margin: 1.125rem 1.1875rem 1rem 1.0625rem;
   display: flex;
 }
 main .historial1 .card-info .tu-domii .dom img {
-  width: 40px;
-  height: 40px;
+  width: 2.5rem;
+  height: 2.5rem;
   border-radius: 50%;
-  margin: 6px 0 5px 10px;
+  margin: 0.375rem 0 0.3125rem 0.625rem;
 }
 main .historial1 .card-info .tu-domii .dom i {
   color: yellow;
@@ -531,64 +556,64 @@ main .historial1 .card-info .tu-domii .dom .dom1 {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  margin-left: 10px;
+  margin-left: 0.625rem;
 }
 main .historial1 .card-info .tu-domii .dom .dom1 div {
   display: flex;
 }
 main .historial1 .card-info .tu-domii .dom .dom1 p {
   color: #5856D6;
-  font-size: 15px;
+  font-size: 0.9375rem;
   font-weight: 700;
 }
 main .historial1 .card-info .tu-domii .dom .dom1 p:last-child {
   color: black;
 }
 main .historial1 .card-info .productos {
-  width: 355px;
-  height: 120px;
+  width: 22.1875rem;
+  height: 7.5rem;
   background: rgba(88, 86, 214, 0.5);
-  border-radius: 20px;
-  margin-bottom: 8px;
+  border-radius: 1.25rem;
+  margin-bottom: 0.5rem;
 }
 main .historial1 .card-info .productos div {
-  width: 293px;
-  height: 68px;
+  width: 18.3125rem;
+  height: 4.25rem;
   background: #FFFFFF;
-  border: 2px solid #5856D6;
-  border-radius: 10px;
+  border: 0.125rem solid #5856D6;
+  border-radius: 0.625rem;
   display: flex;
-  margin: 11px 33px 24px 31px;
+  margin: 0.6875rem 2.0625rem 1.5rem 1.9375rem;
   align-items: center;
   justify-content: space-around;
 }
 main .historial1 .card-info .productos div img {
-  width: 53px;
-  height: 44px;
-  border-radius: 10px;
+  width: 3.3125rem;
+  height: 2.75rem;
+  border-radius: 0.625rem;
 }
 main .historial1 .card-info .efectivo {
-  width: 355px;
-  height: 190px;
+  width: 22.1875rem;
+  height: 11.875rem;
   background: rgba(88, 86, 214, 0.5);
-  border-radius: 20px;
+  border-radius: 1.25rem;
 }
 main .historial1 .card-info .efectivo .ef {
-  width: 291px;
-  height: 86px;
-  border-radius: 10px;
+  width: 18.1875rem;
+  height: 5.375rem;
+  border-radius: 0.625rem;
   background: #FFFFFF;
-  border: 2px solid #5856D6;
-  margin: 21px 33px 35px 31px;
+  border: 0.125rem solid #5856D6;
+  margin: 1.3125rem 2.0625rem 2.1875rem 1.9375rem;
   display: flex;
   justify-content: space-around;
   align-items: center;
 }
 main .historial1 .card-info .efectivo .ef .ef1 {
-  font-size: 15px;
+  font-size: 0.9375rem;
 }
 main .historial1 .card-info .efectivo .ef .ef2 {
-  font-size: 13px;
+  font-size: 0.8125rem;
   font-weight: 700;
   color: green;
 }
@@ -596,14 +621,14 @@ main .historial1 .card-info .efectivo .ef .ef2 p:first-child {
   color: red;
 }
 main .historial1 .card-info .boton-ayuda {
-  width: 91px;
-  height: 50px;
+  width: 5.6875rem;
+  height: 3.125rem;
   background: #5856D6;
-  border-radius: 14px;
+  border-radius: 0.875rem;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 49px;
+  margin-top: 3.0625rem;
 }
 main .historial1 .card-info .boton-ayuda p {
   color: white;
@@ -822,6 +847,9 @@ main .historial1 .card-info .boton-ayuda p {
   header .encabezado .botones div ul li a {
     font-size: 11px;
   }
+  main {
+    padding-top: 60px;
+  }
   main .container .banner .banner-img {
     margin-right: 10px;
   }
@@ -875,15 +903,18 @@ main .historial1 .card-info .boton-ayuda p {
   main .main .somos-domii .texto1 {
     font-size: 14px;
   }
-  footer div h4 {
+  footer .footer div h4 {
     font-size: 16px;
   }
-  footer .contacto {
+  footer .footer .info {
+    margin: 53px 41px 59px 20px;
+  }
+  footer .footer .contacto {
     display: flex;
     align-items: center;
     flex-direction: column;
   }
-  footer .contacto .logosinfo a img {
+  footer .footer .contacto .logosinfo a img {
     width: 20px;
   }
 }
