--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,30 +1,43 @@
 footer{
-    width: 100%;
-    height: 394px;
-    background: #010047;
-    color: white;
-    display: flex;
-    a{
+    .footer{
+        width: 100%;
+        height: 394px;
+        background: #010047;
         color: white;
-    }
-    .info{
-        width: 220px;
-        height: 282px;
-        margin: 53px 41px 59px 172px;
         display: flex;
-        flex-direction: column;
-        justify-content: space-between; 
-    }
-    .contacto{
-        margin-top: 53px;
-        width: 220px;
-        height: 282px;
-        .logosinfo a{
-            margin: 8px;
-            padding-top: 20px;        
+        a{
+            color: white;
         }
-        h4{
-            margin-bottom: 22px;
+        .info{
+            width: 220px;
+            height: 282px;
+            margin: 53px 41px 59px 172px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between; 
+        }
+        .contacto{
+            margin-top: 53px;
+            width: 220px;
+            height: 282px;
+            .logosinfo a{
+                margin: 8px;
+                padding-top: 20px;        
+            }
+            h4{
+                margin-bottom: 22px;
+            }
+        }
+    }
+    .derechos{
+        background-color: #010047;
+        color: rgb(134, 134, 134);
+        text-align: center;
+        padding-bottom: 20px;
+        p{
+            font-size: 16px;
+            opacity: 50%;
+
         }
     }
 }
