--- a/scss/layout/mediaquerry/_media-596.scss
+++ b/scss/layout/mediaquerry/_media-596.scss
@@ -30,6 +30,7 @@
     
      
     main{
+        padding-top: 60px;
         .container{
             .banner{
                 .banner-img{
@@ -110,19 +111,24 @@
 
 
     footer{
-        div{
-            h4{
-                font-size: 16px;
+        .footer{
+            div{
+                h4{
+                    font-size: 16px;
+                }
             }
-        }
-        .contacto{
-            display: flex;
-            align-items: center;
-            flex-direction: column;
-            .logosinfo{
-                a{
-                    img{
-                        width: 20px;
+            .info{
+                margin: 53px 41px 59px 20px;
+            }
+            .contacto{
+                display: flex;
+                align-items: center;
+                flex-direction: column;
+                .logosinfo{
+                    a{
+                        img{
+                            width: 20px;
+                        }
                     }
                 }
             }
